<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"

        >

        <item
            android:id="@+id/show_secure"
            android:enabled="true"
            android:title="Insta 360"
            android:visible="true"
            app:showAsAction="withText" />

        <item
            android:id="@+id/richo"
            android:enabled="true"
            android:title="Richo 360"
            android:visible="true"
            app:showAsAction="withText" />
    </group>


    <item
        android:id="@+id/Cache"
        android:title="@string/Cache" />
    <item
        android:id="@+id/one"
        android:title="@string/ContactUs" />

    <item
        android:id="@+id/three"
        android:title="@string/Logout" />
    <item
        android:id="@+id/refresh"
        android:title="@string/Refresh"
        android:visible="false" />


    <item
        android:id="@+id/two"
        android:visible="false"
        android:title="@string/Website" />


    <item
        android:id="@+id/walkthrough"

        android:title="@string/walk" />






</menu>