<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_black"
        android:gravity="center"

        android:orientation="vertical"
        android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/custom_black"
                    android:padding="28dp"
                    android:layout_marginBottom="50dp"
                    android:src="@mipmap/ic_launcher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="360° Interior Monitoring"
            android:textColor="@color/custom_yellow"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/user_id"
            android:textColor="@color/custom_grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userIdEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:maxLength="40"
            android:singleLine="true"
            android:textColor="@color/custom_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textColor="@color/custom_grey"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@color/custom_grey"
                app:passwordToggleEnabled="true" />


            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="@drawable/eye"
                android:backgroundTint="@color/white"
                android:onClick="ShowHidePass"
                android:padding="5dp"
                app:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />
        </RelativeLayout>


        <TextView
            android:id="@+id/forgorpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:text="Forgot Password"
            android:textColor="@color/custom_grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginViewBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_selector"
            android:fontFamily="sans-serif"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/privacyPolicyViewTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/custom_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/termsOfUseViewTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/terms_of_use"
            android:textColor="@color/custom_grey"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>