<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_black"
        android:orientation="vertical"
        android:padding="15dp">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:id="@+id/back"
            android:background="@color/custom_black"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/custom_black"
            android:padding="28dp"
            android:src="@drawable/banner_logo" />




        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="match_parent"
>


            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginBottom="30dp"
                android:text="OTP has been sent to your email ID"
                android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/TF_authentication"
            android:textColor="@color/custom_grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:maxLength="40"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="@color/custom_grey" />


        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_selector"
            android:fontFamily="sans-serif"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Send_Code"
            android:gravity="center"
            android:id="@+id/send_code_again"
            android:textColor="@color/custom_grey"
            android:textSize="18sp" />

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>