<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="2dp"
    android:background="@color/black_87">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black_87"
            android:text="@string/IMP" />
     <LinearLayout
         android:layout_width="fill_parent"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="15dp"
             android:id="@+id/ins"
             android:textColor="@color/black_87"
             android:text="@string/captureNotification" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textSize="15dp"
             android:padding="10dp"
             android:visibility="gone"
             android:id="@+id/underline"
             android:textColor="@color/black_87"
             android:text="Learn how" />


     </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:id="@+id/second"
            android:layout_marginTop="10dp"
            android:textColor="@color/black_87"
            android:text="@string/ins" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingBottom="10dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/no"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:background="@color/colorGreen_A400"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="No, Continue Capturing?" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
               android:backgroundTint="@color/custom_black"
                android:background="@drawable/boader_radius_round"
                android:gravity="center">

                <TextView
                    android:layout_width="80dp"
                    android:id="@+id/yes"
                    android:padding="5dp"
                    android:gravity="center"
                    android:backgroundTint="@color/custom_black"
                    android:background="@drawable/boader_radius_round"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="OK " />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>